fixed warnibng overflow and preview width

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,16 +22,29 @@ body {
   background-color: var(--bg-color);
 }
 main {
-  max-width: 80%;
   margin: 1em auto;
 }
-main > * {
+main > h2 {
+  font-size: 2.5em;
+  text-align: center;
+
+  margin-top: 0em;
+}
+main > section {
   width: fit-content;
   background-color: var(--primary-light);
-  padding: 5em;
+
+  padding: 4em;
   border-radius: 2.5em;
 }
 
+.flex {
+  display: flex;
+}
+.gap-5em {
+  gap: 5em;
+}
+/* Forms */
 fieldset {
   box-sizing: border-box;
   background-color: var(--primary-dark);
@@ -49,7 +62,6 @@ fieldset > p {
 fieldset > p > * {
   margin: 0em 0.5em;
 }
-
 legend {
   font-size: 1.2em;
   font-weight: 500;
@@ -65,19 +77,23 @@ legend {
   border-top-left-radius: 16px;
 }
 
-.flex {
+div.radios {
   display: flex;
+  justify-content: space-evenly;
+  margin: 0.5em;
 }
-.gap-5em {
-  gap: 5em;
+div.radios > * {
+  margin: 0em 1em;
 }
+
+/* Preview Window */
 .preview-window {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: min-content;
 
-  margin: auto;
+  margin: 0em auto;
 }
 .preview-window .buttons {
   display: flex;
@@ -111,13 +127,4 @@ legend {
 }
 .preview-window .buttons > *:last-of-type {
   border-top-right-radius: 12px;
-}
-
-div.radios {
-  display: flex;
-  justify-content: space-evenly;
-  margin: 0.5em;
-}
-div.radios > * {
-  margin: 0em 1em;
 }
